# solido-legacy-sdk

./: .gitignore  Cargo.toml  README.md  install-precommit.sh
core/: Cargo.toml
core/src/: err.rs  internal_utils.rs  keys.rs  lib.rs  pda.rs  quote.rs
core/src/instructions/: mod.rs  update_exchange_rate_v2.rs  withdraw_v2.rs
core/src/state/: account_list.rs  lido.rs  mod.rs
core/src/state/account_list/: mod.rs  validator_list.rs
core/src/typedefs/: account_type.rs  exchange_rate.rs  fee_recipients.rs  list_header.rs  mod.rs  reward_distribution.rs
core/src/typedefs/metrics/: lamports_histogram.rs  mod.rs  withdraw_metric.rs
core/src/typedefs/validator/: mod.rs  seed_range.rs
core/tests/common/: accounts.rs  consts.rs  instructions.rs  mod.rs  mollusk.rs  paths.rs  pda.rs
core/tests/tests/: mod.rs  pda.rs  state.rs
core/tests/tests/instructions/: mod.rs  update_exchange_rate_v2.rs  withdraw_v2.rs
test-fixtures/: README.md  largest-vote.json  largest-vsa.json  lido.json  reserve.json  stsol.json
