[workspace]
resolver = "2"

members = [
    "core"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
borsh = { version = "^1", default-features = false }
const-crypto = { version = "^0.3", default-features = false }

# dev deps
bs58 = { version = "^0.5", default-features = false }
serde = { version = "^1", default-features = false }
serde_json = { version = "^1", default-features = false }

# solana deps
# group them together to ensure same version throughout
# and to deal with dependency hell more easily
solana-account-decoder-client-types = { version = "^2", default-features = false }
solana-pubkey = { version = "^2", default-features = false }

# workspace members
